# TinyHarness

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TINYHARNESS.md  flake.nix
.github/workflows/: ci.yml
docs/: README.md  configuration.md  contributing.md
docs/examples/sockudo-worker/: Cargo.toml  README.md
docs/examples/sockudo-worker/src/: auth.rs  lib.rs  main.rs  ollama.rs  worker.rs
src/: agent.rs  context.rs  main.rs  session.rs  style.rs
src/agent/: command_result.rs  confirm.rs  display.rs  mod.rs  setup.rs  signal.rs  stream.rs  tool_result.rs  tools.rs  tui_loop.rs
src/commands/: apikey.rs  command.rs  compact.rs  context.rs  debug.rs  files.rs  init.rs  mod.rs  models.rs  registry.rs  sessions.rs  settings.rs  skill.rs
src/config/: mod.rs
src/provider/: llama_cpp.rs  mod.rs  ollama.rs  openai_compat.rs  vllm.rs
src/tools/: grep.rs  mod.rs  read.rs
src/ui/: confirm.rs  diff.rs  input.rs  wrap.rs
tests/sockudo/: README.md  docker-compose.yml  run-test.sh
tests/sockudo/config/: config.toml
tinyharness-lib/: Cargo.toml  LICENSE
tinyharness-lib/src/: context.rs  lib.rs  mode.rs  session.rs  skill.rs  token.rs
tinyharness-lib/src/config/: mod.rs
tinyharness-lib/src/prompts/: agent.md  casual.md  planning.md  research.md
tinyharness-lib/src/provider/: llama_cpp.rs  mod.rs  ollama.rs  openai_compat.rs  openai_compat_provider.rs  sockudo.rs  vllm.rs
tinyharness-lib/src/tools/: auto_compact.rs  edit.rs  git.rs  glob.rs  grep.rs  invoke_skill.rs  ls.rs  mod.rs  question.rs  read.rs  run.rs  switch_mode.rs  tool.rs  web_search.rs  write.rs
tinyharness-lib/tests/: sockudo_integration.rs
tinyharness-ui/: Cargo.toml
tinyharness-ui/src/: lib.rs  output.rs  style.rs
tinyharness-ui/src/tui/: app.rs  cell.rs  screen.rs  terminal.rs  widget.rs
tinyharness-ui/src/tui/widgets/: conversation.rs  input_bar.rs  sidebar.rs  spinner.rs  status_bar.rs  tool_output.rs
tinyharness-ui/src/ui/: confirm.rs  diff.rs  input.rs  mod.rs
