[workspace]
members = [".", "tinyharness-lib"]

[package]
name = "TinyHarness"
version = "0.1.0"
license = "MIT"
description = "tinyharness - ai coding harness"
edition = "2024"

[[bin]]
name = "tinyharness"
path = "src/main.rs"

[dependencies]
tinyharness-lib = { version = "0.1.0", path = "tinyharness-lib" }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.11.1"
rustyline = { version = "18.0.0", features = ["derive"] }
ctrlc = "3"
chrono = "0.4.42"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true