[package]
name = "tinyharness-lib"
version = "0.1.0"
license = "MIT"
description = "core liblary for tinyharness"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.4", features = ["stream"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
regex = "1.11.1"
glob = "0.3.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"