[package]
name = "tinyharness-ui"
version = "0.1.2"
license = "MIT"
description = "ui library for tinyharness"
edition = "2024"

[dependencies]
tinyharness-lib = { version = "0.1.2", path = "../tinyharness-lib" }
rustyline = { version = "18.0.0", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.11.1"
libc = "0.2"
signal-hook = "0.3"

[features]
default = []
tui = []
