[package]
name = "sockudo-worker"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Sockudo AI Transport worker — connects to Sockudo, receives ai-input events, calls Ollama, streams responses back as versioned message mutations"

# This is an example project, not part of the TinyHarness Cargo workspace.
[workspace]

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hmac = "0.12"
sha2 = "0.10"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6.1", features = ["derive", "env"] }